<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019 Silicon Labs, http://www.silabs.com. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppTheme.Light">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/device_name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_config_item_padding">

        <EditText
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_dialog_config_name_label"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="@dimen/dialog_value_size" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator" />

    <Switch
        android:id="@+id/sw_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_config_item_padding"
        android:text="@string/device_dialog_config_proxy_label"
        android:textSize="@dimen/dialog_label_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator" />

    <Switch
        android:id="@+id/sw_relay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_config_item_padding"
        android:text="@string/device_dialog_config_relay_label"
        android:textSize="@dimen/dialog_label_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator" />

    <Switch
        android:id="@+id/sw_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_config_item_padding"
        android:text="@string/device_dialog_config_friend_label"
        android:textSize="@dimen/dialog_label_size" />

    <LinearLayout
        android:id="@+id/low_power_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_separator_height"
            android:foreground="@color/dialog_device_config_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dialog_config_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/device_dialog_config_low_power_label"
                android:textSize="@dimen/dialog_label_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/device_dialog_config_low_power_supported"
                android:textSize="@dimen/dialog_label_size" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_config_item_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_dialog_config_group_label"
            android:textSize="@dimen/dialog_label_size" />

        <Spinner
            android:id="@+id/sp_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_value_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_config_item_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_dialog_config_functionality_label"
            android:textSize="@dimen/dialog_label_size" />

        <Spinner
            android:id="@+id/sp_functionality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_value_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_separator_height"
        android:foreground="@color/dialog_device_config_separator"
        android:padding="@dimen/dialog_item_padding" />

</LinearLayout>
